# source-intercom-camera

./: camera
intercomCamera/: .autotools  .cproject  .project  NEWS  README  configure  configure.ac
intercomCamera/autom4te.cache/: output.0  requests  traces.1
intercomCamera/src/: I2CWrapper.c  I2Cwrapper.h  Makefile.am  Makefile.in  audioReceiveThread.c  audioTransmit.h  audioTransmitThread.c  camera.h  connections.c  connections.h  gst-commands.txt  i2cThread.c  i2cThread.h  i2c_funcs.c  i2c_funcs.h  io.c  io.h  keys.c  keys.h  main.c  mcp23017.c  mcp23017.h  ringThread.c  testThread.c  timerThread.c  timerThread.h  updateThread.c  updateThread.h  videoThread.c  videoThread.h
